# TestProjTechArgos

TestProject/: CMakeLists.txt  main  main.cpp
TestProject/tmp/: indata.txt
